//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  userId String [pk]
  username String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  university String [not null]
  email String [unique, not null]
  passwordHash String [not null]
  signUpDate DateTime [default: `now()`, not null]
  competitionIds String[] [not null]
  signUpSheetIds String[] [not null]
  competition Competition [not null]
  signUpSheet SignUpSheet [not null]
  scoresheets Scoresheet [not null]
}

Table RangeMaster {
  rangeMasterId String [pk]
  university String [not null]
  clubName String [unique, not null]
  email String [unique, not null]
  passwordHash String [not null]
  signUpDate DateTime [default: `now()`, not null]
  competitions Competition [not null]
}

Table Competition {
  competitionId String [pk]
  competitionName String [not null]
  competitionDate DateTime [not null]
  university String
  archers String[] [not null]
  judges String[] [not null]
  rangeMasterId String [not null]
  participantIds String[] [not null]
  signUpSheetId String [unique, not null]
  participants User [not null]
  hostedBy RangeMaster [not null]
  signUpSheet SignUpSheet [not null]
  scoresheets Scoresheet [not null]
}

Table SignUpSheet {
  signUpSheetId String [pk]
  competitionId String [unique, not null]
  participantIds String[] [not null]
  competition Competition
  participants User [not null]
}

Table Scoresheet {
  scoresheetId String [pk]
  scoresheet Json [not null]
  competitionId String [unique, not null]
  userId String [unique, not null]
  competition Competition [not null]
  user User [not null]
}

Ref: User.competitionIds > Competition.competitionId

Ref: User.signUpSheetIds > SignUpSheet.signUpSheetId

Ref: Competition.participantIds > User.userId

Ref: Competition.rangeMasterId > RangeMaster.rangeMasterId

Ref: Competition.signUpSheetId - SignUpSheet.signUpSheetId

Ref: SignUpSheet.participantIds > User.userId

Ref: Scoresheet.competitionId > Competition.competitionId

Ref: Scoresheet.userId > User.userId